--- a/app/ui/dashboard/sidebar/sidebar.module.css
+++ b/app/ui/dashboard/sidebar/sidebar.module.css
@@ -39,3 +39,21 @@
   font-size: 12px;
   color: var(--textSoft);
 }
+
+.logout{
+  padding: 20px;
+  margin: 5px 0px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+  border-radius: 10px;
+  background: none;
+  border: none;
+  color: white;
+  width: 100%;
+}
+
+.logout:hover{
+  background-color: #2e374a;
+}
